# webrite

./: .gitignore  Cargo.toml  watch-build-css.sh
src/: components.rs  lib.rs  main.rs  templates.rs
static/css/tailwindcss/: package.json  tailwind.config.js
static/css/tailwindcss/src/: style.css
