[package]
name = "webrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maud = { version = "0.24.0", features = ["rocket"] }
once_cell = "1.15.0"
pulldown-cmark = { version = "0.9.2", default-features = false }
rocket = "0.4.11"
rocket_codegen = "0.4.11"
rocket_contrib = "0.4.11"
